--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,54 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f4f4f2;
   --foreground: #171717;
+  --accent-color: #807170;
+  --text-color: #5e452e;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+} */
+button {
+  cursor: pointer;
+}
+
+h1 {
+  font-size: clamp(2.2rem, 1.2rem + 3vw, 3.5rem);
+  font-family: Tenor Sans, Tenor Sans Fallback;
+}
+h2 {
+  font-size: clamp(1.25rem, 0.93rem + 1.6vw, 2.25rem);
+  font-weight: 700;
+  font-family: Tenor Sans, Tenor Sans Fallback;
+}
+
+h3 {
+  font-size: clamp(1.1rem, 0.7rem + 1vw, 2rem);
+  font-weight: 700;
+  font-family: Tenor Sans, Tenor Sans Fallback;
+}
+
+h4 {
+  font-size: clamp(1.15rem, 0.93rem + 1.6vw, 2.15rem);
+  font-weight: 700;
+  font-family: Tenor Sans, Tenor Sans Fallback;
+}
+
+.font-accent {
+  font-family: Nunito, Nunito Fallback;
 }
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text-color);
 }
