--- a/src/component/Header/Header.module.scss
+++ b/src/component/Header/Header.module.scss
@@ -1,6 +1,6 @@
 .burger_btn {
   width: 30px;
-  height: 100%;
+  height: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
